--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,7 @@
         </section>
         <section>
             <h3>Jest, Enzyme, React Test Renderer, React Testing Library, ...</h3>
-            <p>L'idées est de tester les <i>composants</i>, avec leurs états et leurs props.</p>
+            <p>L'idée est de tester les <i>composants</i>, avec leurs états et leurs props.</p>
             <p>L'arrivée des hooks a fait bouger la hiérarchie des outils de test.</p>
             <ul>
                 <li>Enzyme: les Hooks ont mis un moment à être supportés</li>
@@ -1354,6 +1354,7 @@
             expect(screen.getAllByRole('button')).toHaveLength(2)
           })
           </code></pre>
+          <p><a href="https://testing-library.com/docs/queries/about#types-of-queries" target="_blank">Queries</a></p>
         </section>
         <section>
             <h3>Vérifier qu'une méthode a été appelée</h3>
