--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="reveal/reset.css"/>
     <link rel="stylesheet" href="reveal/reveal.css"/>
-    <link rel="stylesheet" href="reveal/theme/black.css" id="theme"/>
+    <link rel="stylesheet" href="reveal/theme/white.css" id="theme"/>
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="reveal/plugin/highlight/monokai.css" id="highlight-theme"/>
@@ -50,14 +50,6 @@
             </h1>
             <h3>#ES6</h3>
             <p style="text-align: center"><a target="_blank" href="http://twitter.com/jbcazaux">@jbcazaux</a></p>
-
-            <a href="https://www.netlify.com">
-                <img
-                        src="https://www.netlify.com/img/global/badges/netlify-color-bg.svg"
-                        alt="Deploys by Netlify"
-                        style="border: none; background: none; box-shadow: none; margin: 0; float: right"
-                />
-            </a>
         </section>
         <section data-visibility="hidden"><img data-src="images/mynameis.jpg" alt="my name is"/></section>
         <section data-visibility="hidden"><img data-src="images/coffee.gif" alt="coffee break"/></section>
@@ -1661,7 +1653,7 @@
         </section>
         <section>
             <h3>Let's do it !</h3>
-            <h3>help ? <a href="mailto:jbcazaux@gmail.com">jbcazaux@gmail.com</a></h3>
+            <h3>help ? <a href="mailto:info@oxiane.com">info@oxiane.com</a></h3>
             <h3><a href="https://formation-reactjs.fr">https://formation-reactjs.fr</a></h3>
         </section>
     </div>
