--- a/index.html
+++ b/index.html
@@ -1431,7 +1431,7 @@
                 <li><i>StudentDetails</i>: Vérifier les textes (avec Student null ou non)</li>
                 <li><i>Filter</i>: Verifier que le callback est appelé quand l'évènement <i>change</i> est propagé</li>
                 <li>
-                    <i>StudenstTable</i>: Vérifier le nombre de ligne dans le tableau, suivant le jeu de données. Tester
+                    <i>StudentsTable</i>: Vérifier le nombre de ligne dans le tableau, suivant le jeu de données. Tester
                     les
                     appels aux callbacks aussi.
                 </li>
