--- a/index.html
+++ b/index.html
@@ -1564,7 +1564,7 @@
             <h3>Optimisations</h3>
         </section>
         <section>
-            <h3>Ne pas faire trop de ré-affichages innutiles</h3>
+            <h3>Ne pas faire trop de ré-affichages inutiles</h3>
             <img data-src="images/should-component-update.png" alt="update"/>
         </section>
         <section>
