--- a/index.html
+++ b/index.html
@@ -1476,7 +1476,7 @@
                   &lt;Route path="/admin/*" element={&lt;Admin /&gt;} &gt;
                     &lt;Route path="users" element={&lt;UsersAdmin /&gt;} /&gt;
                     &lt;Route path="articles" element={&lt;ArticlesAdmin /&gt;} /&gt;
-                  &lt;/Route /&gt;
+                  &lt;/Route &gt;
                   &lt;Route path="*" element={&lt;NotFound /&gt;} /&gt;
                 &lt;/Routes&gt;
               &lt;/Router&gt;,
