--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                const defaultLevel = defaultValues[1]
 
                const newPlayer = {name: 'player1', data: defaultLevel}
-               const newPlayerUpdated = {...newPlayer, data: {level : 2}
+               const newPlayerUpdated = {...newPlayer, data: {level : 2}}
           </code></pre>
         </section>
         <section>
