--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             import Hello from "./Hello"
             const container = document.getElementById('root')
             const root = createRoot(container)
-            root.render(<Hello name="world" />)
+            root.render(&lt;Hello name="world" /&gt;)
           </code></pre>
         </section>
         <section>
