--- a/index.html
+++ b/index.html
@@ -435,12 +435,12 @@
         </section>
         <section>
           <h3>Hello world</h3>
-          <pre>Hello.js<code data-trim>
+          <pre>Hello.tsx<code data-trim>
             const Hello = (props) => <div>Hello {props.name} !</div>
 
             export default Hello
             </code></pre>
-          <pre class="fragment">index.js<code class="jsx" data-trim>
+          <pre class="fragment">index.tsx<code class="jsx" data-trim>
             import { createRoot } from 'react-dom/client'
             import Hello from "./Hello"
             const container = document.getElementById('root')
